--- a/recipe-page/index.html
+++ b/recipe-page/index.html
@@ -25,24 +25,26 @@
             <img src="assets/images/image-omelette.jpeg" alt="">
         </div>
         <h1 class="header">Simple Omelette Recipe</h1>
-        <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
+        <p class="recipe-info">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
             to perfection, optionally filled with your choice of cheese, vegetables, or meats.
         </p>
 
-        <h3>
-            Preparation time
-        </h3>
-        <ul>
-            <li>
-                Total: Approximately 10 minutes
-            </li>
-            <li>
-                Preparation: 5 minutes
-            </li>
-            <li>
-                Cooking: 5 minutes
-            </li>
-        </ul>
+        <div class="preperation-info">
+            <h3>
+                Preparation time
+            </h3>
+            <ul>
+                <li>
+                    Total: Approximately 10 minutes
+                </li>
+                <li>
+                    Preparation: 5 minutes
+                </li>
+                <li>
+                    Cooking: 5 minutes
+                </li>
+            </ul>
+        </div>
 
         <h2>
             Ingredients
